--- a/index.html
+++ b/index.html
@@ -30,11 +30,9 @@
         </nav>
 
     </header>
-    <div class="sep"></div>
-    <div class="center"><span class="label">Ingresa el texto a visualizar:</span>
-
-        <input type="text" id="text" placeholder="Ejemplo: Victor">
-    </div>
+    <div class="sep"></div></div>
+    <div class="centrado"><input class="centrado label" type="text" id="text" placeholder="Ingresa el texto a visualizar">
+    </div> 
     <div id="container" class="center"></div>
     <script src="main.js"></script>
 </body>
