--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VKrafts - Maracaibo </title>
-    <link rel="stylesheet" href="output.css">
+    <link rel="stylesheet" href="outputImprenta.css">
+    <link rel="stylesheet" href="outputScript.css">
     <link rel="stylesheet" href="navbar.css">
 </head>
 
@@ -20,10 +21,9 @@
                 <span></span>
             </button>
             <ul class="nav-menu">
-                <li class="nav-menu-item"> <a href="#" class="nav-menu-link"> Script </a></li>
-                <li class="nav-menu-item"> <a href="#" class="nav-menu-link"> Bold </a> </li>
-                <li class="nav-menu-item"> <a href="#" class="nav-menu-link"> XD </a> </li>
-                <li class="nav-menu-item"> <a href="#" class="nav-menu-link"> Instagram </a> </li>
+                <li class="nav-menu-item"> <a href="#" id="script" class="nav-menu-link"> Caligrafía </a></li>
+                <li class="nav-menu-item"> <a href="#"  id="imprenta" class="nav-menu-link"> Imprenta </a> </li>
+                <li class="nav-menu-item"> <a href="#" class="nav-menu-link"> Contáctanos </a> </li>
             </ul>
 
 
