--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 <body>
     <header class="header">
         <nav class="nav">
-            <a href="#" class="logo">VKrafts</a>
+            <a href="#" class="averus logo">VKrafts</a>
             <button class="toggle pos">
                 <span></span>
                 <span></span>
                 <span></span>
             </button>
             <ul class="nav-menu">
-                <li class="nav-menu-item"> <a href="#" id="script" class="nav-menu-link"> Caligrafía </a></li>
-                <li class="nav-menu-item"> <a href="#"  id="imprenta" class="nav-menu-link"> Imprenta </a> </li>
-                <li class="nav-menu-item"> <a href="#" class="nav-menu-link"> Contáctanos </a> </li>
+                <li class="nav-menu-item "> <a href="#" id="script" class="averus nav-menu-link"> Caligrafia </a></li>
+                <li class="nav-menu-item"> <a href="#"  id="imprenta" class="averus nav-menu-link"> Imprenta </a> </li>
+                <li class="nav-menu-item"> <a href="#" class="averus nav-menu-link"> Contactanos </a> </li>
             </ul>
 
 
