--- a/index.html
+++ b/index.html
@@ -40,11 +40,15 @@
     <script src="html2canvas.js"></script>
 
     <script>
-        var elements = document.getElementsByClassName('font')
+        function addEvents(){
+            var elements = document.getElementsByClassName('font')
+    
+            for (let i = 0; i < elements.length; i++) {
+                elements[i].addEventListener('click', (e) => { e.preventDefault(); createImage(e) })
+            }
 
-        for (let i = 0; i < elements.length; i++) {
-            elements[i].addEventListener('click', (e) => { e.preventDefault(); createImage(e) })
         }
+        
 
         async function copyToClipBoard(e) {
             e.preventDefault();
