feat: remove horizontal scross from mobiles and fix input placeholder

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 </head>
 
 <body>
+    <div class="sep"></div></div>
+    <div class="centrado center">
+        <input class="centrado label" type="text" id="text" placeholder="Ingresa el texto a visualizar">
+    </div> 
+    <div id="container" class="center"></div>
     <header class="header">
         <nav class="nav">
             <a href="#" class="averus logo">VKrafts</a>
@@ -30,10 +35,6 @@
         </nav>
 
     </header>
-    <div class="sep"></div></div>
-    <div class="centrado"><input class="centrado label" type="text" id="text" placeholder="Ingresa el texto a visualizar">
-    </div> 
-    <div id="container" class="center"></div>
     <script src="main.js"></script>
 </body>
 
