--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <ul class="nav-menu">
                 <li class="nav-menu-item "> <a href="#" id="script" class="averus nav-menu-link"> Caligrafia </a></li>
                 <li class="nav-menu-item"> <a href="#"  id="imprenta" class="averus nav-menu-link"> Imprenta </a> </li>
-                <li class="nav-menu-item"> <a href="#" class="averus nav-menu-link"> Contactanos </a> </li>
+                <li class="nav-menu-item"> <a href="https://www.instagram.com/vkrafts_mcbo/?hl=es" class="averus nav-menu-link"> Contactanos </a> </li>
             </ul>
 
 
