--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="outputImprenta.css">
     <link rel="stylesheet" href="outputScript.css">
     <link rel="stylesheet" href="navbar.css">
+    <link rel="icon" href="logo.png">
 </head>
 
 <body>
